--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
       </section>
     </header>
-    
+
     <main>
       <section>
         <div
@@ -426,6 +426,7 @@
               </div>
             </div>
           </div>
+          <!-- Right side -->
           <div class="md:flex lg:col-span-1 mt-32">
             <div>
               <div class="bg-white p-6 rounded-md">
@@ -445,17 +446,19 @@
                 </div>
               </div>
               <div class="my-8 p-4 bg-white rounded-md">
-                <div id="title-container"></div>
+                <ol id="title-container" class="list-decimal ml-5">
+                  <!-- New item will be added -->
+                </ol>
                 <hr class="my-4" />
                 <p class="text-xl font-bold py-2">
-                  Total Price: $<span id="totalPrice"></span>
+                  Total Price: $<span id="totalPrice"> 0</span>
                 </p>
 
                 <p class="text-xl font-bold py-2">
-                  Discount: $<span id="discountPrice"></span>
+                  Discount: $<span id="discountPrice"> 0</span>
                 </p>
                 <p class="text-xl font-bold pb-2">
-                  Total: $<span id="total"></span>
+                  Total: $<span id="total"> 0</span>
                 </p>
                 <hr class="my-4" />
                 <button class="btn btn-wide bg-[#F11A7B] text-white">
